...
  FixRequestService,
  store, StoreState, FixRequestModel, FixesModel, useSelector, TagModel, SectionModel, fixRequestActions, useDispatch,
} from 'fixit-common-data-store';
import axios from 'axios';
import { useNavigation } from '@react-navigation/native';
import StyledContentWrapper from '../../../components/styledElements/styledContentWrapper';
import StyledScrollView from '../../../components/styledElements/styledScrollView';
import StyledPageWrapper from '../../../components/styledElements/styledPageWrapper';
import { FormNextPageArrows } from '../../../components/forms/index';
import FadeInAnimator from '../../../common/animators/fadeInAnimator';
import globalStyles from '../../../common/styles/globalStyles';
import Calendar from '../../../components/calendar/calendar';
import FixRequestHeader from '../components/fixRequestHeader';
...
          navigation={navigation}
          screenTitle="Fix Request"
          textHeight={30}/>
        : <FixRequestHeader
          showBackBtn={true}
          navigation={navigation}
          screenTitle="Review your Fixit Request"
          textHeight={30}
          backFunction={goBack}/>}
      <StyledPageWrapper>
        <StyledScrollView testID='styledScrollView'>
          <StyledContentWrapper>
            <View style={{
...
              flexDirection: 'row',
              alignContent: 'space-between',
            }}>
              <View style={{
                flexGrow: 1,
              }}>
                <H3 style={globalStyles.boldTitle}>Category</H3>
                <P>{
                  props.passedFix
                    ? props.passedFix.details.category
                    : fixRequest.category.name
                }</P>
              </View>
              <View style={{
                flexGrow: 1,
              }}>
                <H3 style={globalStyles.boldTitle}>Type</H3>
                <P>{
                  props.passedFix
                    ? props.passedFix.details.type
                    : fixRequest.type.name
                }</P>
              </View>
...
            <Divider />
            <H2>{
              props.passedFix
                ? props.passedFix.details.name
                : fixRequest.name
            }</H2>
            <H3 style={globalStyles.boldTitle}>Job Description</H3>
            <P>{
              props.passedFix
                ? props.passedFix.details.description
                : fixRequest.description
            }</P>
            <H3 style={globalStyles.boldTitle}>Tags</H3>
            <View style={{
              display: 'flex',
              flexDirection: 'row',
              flexWrap: 'wrap',
            }}>
              {
...
                      </View>
                      : null
                  ))
              }
            </View>
            <Divider />
            <H2 style={globalStyles.boldTitle}>Images</H2>
            <Divider />
            <H2 style={globalStyles.boldTitle}>Location</H2>
            <Divider />
            <View style={{
              flexDirection: 'row',
            }}>
              <P>{
                props.passedFix
...
                props.passedFix
                  ? props.passedFix.location.province
                  : fixRequest.location.province
              }</P>
            </View>
            <Spacer height={'40px'} />
            <H2 style={globalStyles.boldTitle}>Availability</H2>
            <Divider />
            <Calendar
              parentSchedules={props.passedFix ? props.passedFix.schedule : fixRequest.schedule}
              canUpdate={false}/>
            <Spacer height={'40px'} />
            <H2 style={globalStyles.boldTitle}>Expected Delivery Date</H2>
            <Divider />
            <P>{getExpectedDeliveryDate()}</P>
            <Spacer height={'40px'} />
            <H2 style={globalStyles.boldTitle}>Budget</H2>
            <Divider />
            <Spacer height={'20px'} />
            <View style={{
              flexDirection: 'row',
              alignItems: 'flex-start',
              justifyContent: 'flex-start',
...
                        : fixRequest.clientEstimatedCost.maximumCost.toString()
                    }</Text>
                  </>
              }
            </View>
            <Spacer height={'40px'} />
            <H2 style={globalStyles.boldTitle}>System Cost Estimate</H2>
            <Divider />
            <Icon library="FontAwesome5" name="dollar-sign" color={'dark'} size={20}/>
            {
              props.passedFix && !props.isFixCraftsmanResponseNotification
                ? <>
                  <View
...
      </StyledPageWrapper>
      {
        props.passedFix
          ? null
          : <FormNextPageArrows secondaryClickOptions={[
            {
              label: 'Submit Fixit Request',
              onClick: handleConfirm,
            },
          ]} />
      }
      <FadeInAnimator visible={submitFixModalOpen} style={{
        position: 'absolute',
...
